--- a/category_extract_feature_github.ipynb
+++ b/category_extract_feature_github.ipynb
@@ -11,9 +11,9 @@
     "    \n",
     "    \n",
     "- 특징 추출 함수 바로가기\n",
-    "[feature extractor](http://168.188.129.204:8080/notebooks/BitcoinAnalysis/BitcoinBlockSampler/category_extract_feature_github.ipynb#%ED%8A%B9%EC%A7%95-%EC%B6%94%EC%B6%9C-%EC%BD%94%EB%93%9C)\n",
+    "[feature extractor](#%ED%8A%B9%EC%A7%95-%EC%B6%94%EC%B6%9C-%EC%BD%94%EB%93%9C)\n",
     "- 특징 추출 관리 함수 바로가기\n",
-    "[manage feature extractor](http://168.188.129.204:8080/notebooks/BitcoinAnalysis/BitcoinBlockSampler/category_extract_feature_github.ipynb#%ED%8A%B9%EC%A7%95-%EC%B6%94%EC%B6%9C-%ED%95%A8%EC%88%98%EB%93%A4%EC%9D%84-%ED%98%B8%EC%B6%9C%ED%95%98%EB%8A%94-%EC%BB%A8%ED%8A%B8%EB%A1%A4-%ED%95%A8%EC%88%98)"
+    "[manage feature extractor](#%ED%8A%B9%EC%A7%95-%EC%B6%94%EC%B6%9C-%ED%95%A8%EC%88%98%EB%93%A4%EC%9D%84-%ED%98%B8%EC%B6%9C%ED%95%98%EB%8A%94-%EC%BB%A8%ED%8A%B8%EB%A1%A4-%ED%95%A8%EC%88%98)"
    ]
   },
   {
